Fix button alignment in banner.css

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -43,7 +43,7 @@ body {
   border: 1.5px solid #fff;
   cursor: pointer;
   position: absolute;
-  top: 70%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: opacity 0.15s;
